crates/slopty-proto/tests/snapshots/golden_project__golden_project__project_set.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
14 00 00 00 01 15 00 1f 06 73 6c 6f 70 74 79 01
00 00 00 01 01 01 02 00
