crates/slopty-proto/tests/snapshots/golden_project__golden_project__project_snapshot.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
9d 06 00 00 09 31 01 01 01 06 73 6c 6f 70 74 79
0d 50 72 6f 6a 65 63 74 73 20 6d 6f 64 65 01 02
03 63 77 64 07 7e 2f 6e 6f 74 65 73 07 6d 61 63
68 69 6e 65 06 73 74 75 64 69 6f 0c 7e 2f 73 72
63 2f 73 6c 6f 70 74 79 01 01 1c 67 69 74 68 75
62 2e 63 6f 6d 2f 61 69 73 6c 6f 70 77 61 72 65
2f 73 6c 6f 70 74 79 01 28 63 30 38 64 34 63 31
65 35 62 32 61 39 66 37 64 33 65 36 61 31 62 38
63 34 64 32 66 30 65 39 61 37 62 35 63 33 64 31
65 01 28 68 74 74 70 73 3a 2f 2f 67 69 74 68 75
62 2e 63 6f 6d 2f 61 69 73 6c 6f 70 77 61 72 65
2f 73 6c 6f 70 74 79 2e 67 69 74 04 6d 61 69 6e
01 0a 63 61 72 67 6f 20 67 61 74 65 01 24 41 20
77 69 72 65 20 63 68 61 6e 67 65 20 63 6f 6d 65
73 20 77 69 74 68 20 69 74 73 20 67 6f 6c 64 65
6e 73 00 01 01 10 01 99 a0 00 00 00 70 00 80 00
00 00 00 00 00 01 10 01 99 a1 b1 c3 d4 70 00 80
00 00 00 00 00 ab cd 80 a6 1d 00 c0 ac 80 02 01
09 66 69 76 65 2d 68 6f 75 72 9c 18 04 0c 08 80
20 00 01 0f 7b 22 67 6f 61 6c 22 3a 22 6f 70 65
6e 22 7d 00 01 01 00 00 05 63 68 6f 72 65 11 42
75 6d 70 20 64 65 70 65 6e 64 65 6e 63 69 65 73
1c 63 61 72 67 6f 20 75 70 64 61 74 65 2c 20 74
68 65 6e 20 74 68 65 20 67 61 74 65 2e 00 00 00
00 00 00 00 00 00 00 0c 7e 2f 73 72 63 2f 73 6c
6f 70 74 79 00 01 10 52 65 61 64 20 79 6f 75 72
20 62 72 69 65 66 2e 00 01 01 41 01 31 01 78 24
00 0b 30 20 39 20 2a 20 2a 20 31 2d 35 0d 45 75
72 6f 70 65 2f 42 65 72 6c 69 6e 00 01 80 e6 8f
bf 8c 34 01 80 d8 c1 a2 8c 34 01 04 01 24 74 61
73 6b 20 34 20 64 69 64 20 6e 6f 74 20 73 74 61
72 74 3a 20 6e 6f 20 77 6f 72 6b 65 72 20 66 69
74 73 80 d8 c1 a2 8c 34 80 d8 c1 a2 8c 34 01 03
01 01 01 02 05 62 75 69 6c 64 0c 53 65 72 76 65
72 20 73 74 6f 72 65 00 03 01 17 77 61 69 74 69
6e 67 20 6f 6e 20 61 20 70 65 72 6d 69 73 73 69
6f 6e 01 10 01 99 a0 00 00 00 70 00 80 00 00 00
00 00 00 01 10 01 99 a1 b1 c3 d4 70 00 80 00 00
00 00 00 ab cd 00 80 d8 c1 a2 8c 34 00 01 24 30
31 39 39 61 31 62 31 2d 63 33 64 34 2d 37 30 30
30 2d 38 30 30 30 2d 30 30 30 30 30 30 30 30 63
30 64 65 01 00 dc 01 1f 6e 65 61 72 20 23 32 20
2b 31 30 30 2c 20 6f 73 20 3d 3d 20 22 6d 61 63
6f 73 22 20 2b 31 30 01 0f 73 6c 6f 70 74 79 2f
73 6c 6f 70 74 79 2f 33 01 0b 2f 77 2f 73 6c 6f
70 74 79 2d 33 01 2a 1e 68 74 74 70 73 3a 2f 2f
67 69 74 68 75 62 2e 63 6f 6d 2f 6f 2f 72 2f 70
75 6c 6c 2f 34 32 01 01 00 01 00 10 63 6c 69 70
70 79 3a 20 32 20 65 72 72 6f 72 73 28 61 61 61
61 61 61 61 61 61 61 61 61 61 61 61 61 61 61 61
61 61 61 61 61 61 61 61 61 61 61 61 61 61 61 61
61 61 61 61 61 28 62 62 62 62 62 62 62 62 62 62
62 62 62 62 62 62 62 62 62 62 62 62 62 62 62 62
62 62 62 62 62 62 62 62 62 62 62 62 62 62 01 ca
01 88 8f 08 00 01 00 80 d8 c1 a2 8c 34 01 02 10
01 99 a0 00 00 00 70 00 80 00 00 00 00 00 00 01
00 17 43 6f 6d 70 69 6c 69 6e 67 20 73 6c 6f 70
74 79 2d 73 65 72 76 65 72 00 80 d8 c1 a2 8c 34
01 10 01 99 a0 00 00 00 70 00 80 00 00 00 00 00
00 01 10 01 99 a1 b1 c3 d4 70 00 80 00 00 00 00
00 ab cd 00 00 00 d0 82 2e 01 94 fb c1 a2 8c 34
00 01 00 01 01 80 d8 c1 a2 8c 34 88 ff c1 a2 8c
34 01 02 08 09 01 09 00 00 00 00 11 01 80 d8 c1
a2 8c 34 01 03 00 02 80 d8 c1 a2 8c 34 01 03 01
10 01 99 a0 00 00 00 70 00 80 00 00 00 00 00 00
01 10 01 99 a1 b1 c3 d4 70 00 80 00 00 00 00 00
ab cd 03 80 d8 c1 a2 8c 34 01 03 02 04 0c 08 80
20 00 04 80 d8 c1 a2 8c 34 01 03 13 03 75 73 64
90 4e 05 80 d8 c1 a2 8c 34 01 03 03 0c 53 65 72
76 65 72 20 73 74 6f 72 65 06 80 d8 c1 a2 8c 34
01 03 04 01 14 63 72 61 74 65 73 2f 73 6c 6f 70
74 79 2d 73 65 72 76 65 72 07 80 d8 c1 a2 8c 34
01 03 05 10 01 99 a0 00 00 00 70 00 80 00 00 00
00 00 00 01 10 01 99 a1 b1 c3 d4 70 00 80 00 00
00 00 00 ab cd 00 08 80 d8 c1 a2 8c 34 01 03 07
00 01 09 80 d8 c1 a2 8c 34 01 03 08 01 0f 73 6c
6f 70 74 79 2f 73 6c 6f 70 74 79 2f 33 01 2a 0a
80 d8 c1 a2 8c 34 01 03 09 01 0b 67 61 74 65 20
70 61 73 73 65 64 28 61 61 61 61 61 61 61 61 61
61 61 61 61 61 61 61 61 61 61 61 61 61 61 61 61
61 61 61 61 61 61 61 61 61 61 61 61 61 61 61 28
62 62 62 62 62 62 62 62 62 62 62 62 62 62 62 62
62 62 62 62 62 62 62 62 62 62 62 62 62 62 62 62
62 62 62 62 62 62 62 62 01 00 88 8f 08 0b 80 d8
c1 a2 8c 34 01 03 0c 10 01 99 a0 00 00 00 70 00
80 00 00 00 00 00 00 01 10 01 99 a1 b1 c3 d4 70
00 80 00 00 00 00 00 ab cd 0c 80 d8 c1 a2 8c 34
01 03 0f 03 1f 53 74 6f 72 65 20 6b 65 65 70 73
20 61 20 6c 6f 67 3b 20 67 61 74 65 20 70 61 73
73 65 64 2e 01 1a 64 6f 63 73 2f 64 65 63 69 73
69 6f 6e 73 2f 70 72 6f 6a 65 63 74 73 2e 6d 64
01 0f 73 6c 6f 70 74 79 2f 73 6c 6f 70 74 79 2f
33 01 2a 0d 80 d8 c1 a2 8c 34 01 03 10 10 01 99
a0 00 00 00 70 00 80 00 00 00 00 00 00 01 10 01
99 a1 b1 c3 d4 70 00 80 00 00 00 00 00 ab cd 03
0e 80 d8 c1 a2 8c 34 01 03 0e 05 72 65 61 64 79
0f 80 d8 c1 a2 8c 34 01 03 12 01 0a 41 70 70 6c
65 20 77 6f 72 6b 10 80 d8 c1 a2 8c 34 01 03 11
00 10 01 99 a0 00 00 00 70 00 80 00 00 00 00 00
00 01 02 1c 66 61 74 61 6c 3a 20 41 75 74 68 65
6e 74 69 63 61 74 69 6f 6e 20 66 61 69 6c 65 64
80 d8 c1 a2 8c 34 00 00 11 80 d8 c1 a2 8c 34 01
03 11 03 10 01 99 a0 00 00 00 70 00 80 00 00 00
00 00 00 01 01 0e 6d 61 69 6e 20 61 74 20 64 64
64 64 64 64 80 d8 c1 a2 8c 34 00 00 10 18 08 18
10 80 80 04 01 40 80 04 80 02 80 80 04 40 01 07
03
