crates/slopty-proto/tests/snapshots/golden_project__golden_project__project_status.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
0e 00 00 00 01 15 00 23 06 73 6c 6f 70 74 79 01
07 00
