crates/slopty-proto/tests/snapshots/golden_project__golden_project__pull_opened.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
28 00 00 00 03 15 27 0c 23 68 74 74 70 73 3a 2f
2f 67 69 74 68 75 62 2e 63 6f 6d 2f 6f 2f 73 6c
6f 70 74 79 2f 70 75 6c 6c 2f 31 32
