crates/slopty-proto/tests/snapshots/golden_project__golden_project__read_thread_task.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
10 00 00 00 01 15 00 18 00 06 73 6c 6f 70 74 79
03 00 00 00
