crates/slopty-proto/tests/snapshots/golden_project__golden_project__rebase.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
d8 00 00 00 01 15 00 2e 10 01 99 a0 00 00 00 70
00 80 00 00 00 00 00 00 01 09 2f 77 2f 73 6c 6f
70 74 79 06 73 6c 6f 70 74 79 28 61 61 61 61 61
61 61 61 61 61 61 61 61 61 61 61 61 61 61 61 61
61 61 61 61 61 61 61 61 61 61 61 61 61 61 61 61
61 61 61 04 6d 61 69 6e 01 0f 73 6c 6f 70 74 79
2f 73 6c 6f 70 74 79 2f 32 02 0b 53 6c 6f 70 74
79 2d 54 61 73 6b 08 73 6c 6f 70 74 79 23 33 0d
53 6c 6f 70 74 79 2d 54 68 72 65 61 64 24 30 31
39 39 61 30 30 30 2d 30 30 30 30 2d 37 30 30 30
2d 38 30 30 30 2d 30 30 30 30 30 30 30 30 30 30
30 36 01 28 61 61 61 61 61 61 61 61 61 61 61 61
61 61 61 61 61 61 61 61 61 61 61 61 61 61 61 61
61 61 61 61 61 61 61 61 61 61 61 61
