crates/slopty-proto/tests/snapshots/golden_project__golden_project__rebased.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
56 00 00 00 03 15 21 28 64 64 64 64 64 64 64 64
64 64 64 64 64 64 64 64 64 64 64 64 64 64 64 64
64 64 64 64 64 64 64 64 64 64 64 64 64 64 64 64
28 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63
63 63 63 63 63 63 63 63 63 63 63 63 63 63 63 63
63 63 63 63 63 63 63 63 63 01
