crates/slopty-proto/tests/snapshots/golden_project__golden_project__remove_worktree.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
7c 00 00 00 01 15 00 34 10 01 99 a0 00 00 00 70
00 80 00 00 00 00 00 00 01 2b 2f 77 2f 73 6c 6f
70 74 79 2f 2e 63 6c 61 75 64 65 2f 77 6f 72 6b
74 72 65 65 73 2f 73 6c 6f 70 74 79 2d 73 6c 6f
70 74 79 2d 33 03 28 64 64 64 64 64 64 64 64 64
64 64 64 64 64 64 64 64 64 64 64 64 64 64 64 64
64 64 64 64 64 64 64 64 64 64 64 64 64 64 64 04
6d 61 69 6e 0b 6f 72 69 67 69 6e 2f 6d 61 69 6e
