crates/slopty-proto/tests/snapshots/golden_project__golden_project__report_branch.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
4c 00 00 00 07 00 10 01 99 a1 b1 c3 d4 70 00 80
00 00 00 00 00 ab cd 00 01 04 72 6f 77 73 19 2f
77 2f 2e 63 6c 61 75 64 65 2f 77 6f 72 6b 74 72
65 65 73 2f 72 6f 77 73 01 0d 77 6f 72 6b 74 72
65 65 2d 72 6f 77 73 02 2f 77 01 04 6d 61 69 6e
