crates/slopty-proto/tests/snapshots/golden_project__golden_project__report_delivered.snap
---
source: crates/slopty-proto/tests/golden_project.rs
expression: hex(&bytes)
---
14 00 00 00 07 05 10 01 99 a1 b1 c3 d4 70 00 80
00 00 00 00 00 ab cd 07
